# ParaCL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  conanfile.py  conanfile.txt  main.cc
.conan/profiles/: debug  release
.github/workflows/: cmake-single-platform.yml  main.yml
ast/: CMakeLists.txt  binop_node.cc  binop_node.hh  context.cc  context.hh  if_node.cc  if_node.hh  inode.hh  node.cc  node.hh  print_node.cc  print_node.hh  scan_node.cc  scan_node.hh  scope.cc  scope.hh  symtab.hh  unop_node.cc  unop_node.hh  value_node.cc  value_node.hh  var_node.cc  var_node.hh  while_node.cc  while_node.hh
ast/concrete/: assign_node.cc  binop_node.cc  if_node.cc  if_node.hh  print_node.cc  print_node.hh  scan_node.cc  scan_node.hh  scope.cc  scope.hh  unop_node.cc  unop_node.hh  value_node.cc  var_node.cc  var_node.hh  while_node.cc  while_node.hh
ast/include/ast/: assign_node.hh  binop_node.hh  codegen.hh  if_node.hh  if_scope.hh  inode.hh  print_node.hh  scan_node.hh  scope.hh  symtab.hh  unop_node.hh  value_node.hh  var_node.hh  while_node.hh
ast/include/ast/detail/: assign_node.hh  binop_node.hh  dump_helpers.hh  if_node.hh  print_node.hh  scan_node.hh  scope.hh  symtab.hh  unop_node.hh  value_node.hh  var_node.hh  while_node.hh
ast/src/: assign_node.cc  binop_node.cc  codegen.cc  context.cc  if_node.cc  if_scope.cc  print_node.cc  scan_node.cc  scope.cc  unop_node.cc  value_node.cc  var_node.cc  while_node.cc
ci/profiles/ubuntu-22.04/: clang_debug.profile  clang_release.profile  gcc_debug.profile  gcc_release.profile
driver/: CMakeLists.txt  driver.cc  driver.hh  main.cc
frontend/: CMakeLists.txt  main.cc
interpreter/: CMakeLists.txt
interpreter/include/interpreter/: cmd_parser.hh  config.hh  interpreter.hh
interpreter/src/: cmd_parser.cc  interpreter.cc
lexer/: CMakeLists.txt  lexer.cc  lexer.hh  lexer.l  scanner.l
parser/: CMakeLists.txt  driver.cc  driver.hh  lexer.cc  lexer.hh  pgrammar.y  scanner.l
parser/include/parser/: color_output.hh  driver.hh
parser/src/: driver.cc  lexer.cc
tests/: CMakeLists.txt  test.cpp
tests/assignment/: assignment.pcl
tests/assignment_with_modify/: assignment_with_modify.pcl  assignment_with_modify1.out
tests/bitwise/: bitwise.pcl  bitwise2.out  bitwise3.out  bitwise4.out  bitwise5.out
tests/braces/: braces1.pcl
tests/complex_logic/: complex_logic.pcl  complex_logic1.in  complex_logic2.in
tests/custom_base/: custom_base.pcl  custom_base1.out
tests/else/: else.pcl
tests/else_if/: else_if.pcl
tests/empty_with_semicolons/: empty_with_semicolons.pcl
tests/fact/: fact.pcl
tests/fibs/: fibs.pcl
tests/incr_decr/: incr_decr.pcl  incr_decr1.out
tests/invalid/: invalid1.pcl  invalid2.pcl  invalid3.pcl  invalid4.pcl
tests/is_prime/: is_prime.pcl
tests/logic/: logic.pcl  logic1.in
tests/loop_input/: loop_input.pcl  loop_input1.in
tests/other/: other.pcl  other1.out
tests/print_logic/: print_logic.pcl
